# Cal3D

cal3d/: CMakeLists.txt
cal3d/cmake/: cal3d-config.cmake.in
cal3d/src/: CMakeLists.txt
cal3d/src/cal3d/: mixer.cpp  mixer.h
